--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -19,4 +19,10 @@
         app:showAsAction="never">/
     </item>
 
+    <item
+        android:id = "@+id/signUp"
+        android:title="Sign Up"
+        app:showAsAction="never">/
+    </item>
+
 </menu>
