--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:id = "@+id/layout">
 
 
     <Button
@@ -34,6 +35,7 @@
         android:layout_marginStart="158dp"
         android:layout_marginTop="208dp"
         android:layout_marginEnd="159dp"
+        android:onClick="colorChange"
         android:text="Button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
