--- a/app/src/main/res/layout/activity_log_cry.xml
+++ b/app/src/main/res/layout/activity_log_cry.xml
@@ -1,9 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LogCry">
+    tools:context=".LogCry"
+    android:orientation="vertical"
+    android:id="@+id/logCryLayout">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/whyCry"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Why did you cry?"
+        tools:layout_editor_absoluteX="14dp"
+        tools:layout_editor_absoluteY="85dp" />
+    <Spinner
+        android:id="@+id/stressors"
+        android:layout_width="268dp"
+        android:layout_height="49dp"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="105dp" />
+
+    <TextView
+        android:id="@+id/whereCry"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Where did you cry?"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="8dp" />
+    <Spinner
+        android:id="@+id/location"
+        android:layout_width="268dp"
+        android:layout_height="49dp"
+        tools:layout_editor_absoluteX="14dp"
+        tools:layout_editor_absoluteY="28dp" />
+
+    <TextView
+        android:id="@+id/whenCry"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="When did you cry?"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="8dp" />
+
+    <CalendarView
+        android:id="@+id/calendar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/howCry"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="How good/bad was it?"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="8dp" />
+    <RatingBar
+        android:id="@+id/ratingBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteX="4dp"
+        tools:layout_editor_absoluteY="304dp" />
+
+
+
+</LinearLayout>
