--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -25,4 +25,11 @@
         app:showAsAction="never">/
     </item>
 
+    <item
+        android:id = "@+id/logIn"
+        android:title="Log In"
+        app:showAsAction="never">/
+    </item>
+
+
 </menu>
