--- a/app/src/main/res/layout/activity_sign_up_profile.xml
+++ b/app/src/main/res/layout/activity_sign_up_profile.xml
@@ -128,6 +128,7 @@
         android:id="@+id/saveButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="saveInfo"
         android:text="Save"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -195,6 +196,7 @@
         android:id="@+id/stressorButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="addStressor"
         android:text="Add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -207,6 +209,7 @@
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="addLocation"
         android:text="Add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
