fixed logcrying but still need to finish addcry

--- a/app/src/main/res/layout/activity_log_cry.xml
+++ b/app/src/main/res/layout/activity_log_cry.xml
@@ -64,6 +64,12 @@
         tools:layout_editor_absoluteX="4dp"
         tools:layout_editor_absoluteY="304dp" />
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="submit"
+        android:text="Button" />
 
 
 </LinearLayout>
