--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="124dp"
         android:text="Leaderboard"
+        android:onClick="goToLeader"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -25,6 +26,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginBottom="124dp"
         android:text="statistics"
+        android:onClick="goToStats"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
