--- a/app/src/main/res/layout/activity_log_in_screen.xml
+++ b/app/src/main/res/layout/activity_log_in_screen.xml
@@ -51,6 +51,7 @@
         android:id="@+id/logInButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="handleAuthChange"
         android:text="Log In"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
