--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,18 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="Theme.PunisherCryCounter" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/punisher_text</item>
+        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorOnPrimary">@color/punisher_text</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/punisher_navBar</item>
+        <item name="colorSecondaryVariant">@color/punisher_navBar</item>
+        <item name="colorOnSecondary">@color/punisher_navBar</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor" tools:targetApi="l">@color/punisher_button</item>
+        <!-- Customize your theme here. -->
+    </style>
 </resources>
