--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,15 +16,15 @@
 
     <style name="Punisher" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="android:background">@color/punisher_background</item>
+        <item name="android:colorBackground">@color/punisher_background</item>
+        <item name = "colorOnBackground">@color/punisher_button</item>
         <item name="colorPrimary">@color/punisher_navBar</item>
         <item name="android:statusBarColor" tools:targetApi="l">@color/punisher_navBar</item>
     </style>
 
     <style name="Melodrama" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <item name="android:colorBackground">@color/melodrama_background</item>
-        <item name = "colorOnBackground">@color/evermore_navBar</item>
-        <item name="colorPrimary">@color/melodrama_navBar</item>
+        <item name="android:colorBackground">@color/melodrama_button</item>
+        <item name = "colorPrimary">@color/melodrama_navBar</item>
         <item name="android:statusBarColor" tools:targetApi="l">@color/melodrama_background</item>
     </style>
 
@@ -34,4 +34,19 @@
         <item name="colorPrimary">@color/evermore_button</item>
         <item name="android:statusBarColor" tools:targetApi="l">@color/evermore_button</item>
     </style>
+
+    <style name="SunsetSeason" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <item name="android:colorBackground">@color/sunset_background</item>
+        <item name = "colorOnBackground">@color/sunset_button</item>
+        <item name="colorPrimary">@color/sunset_button</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/sunset_button</item>
+    </style>
+
+    <style name="Multiply" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <item name="android:colorBackground">#1aca54</item>
+        <item name = "colorOnBackground">@color/black</item>
+        <item name="colorPrimary">@color/black</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/black</item>
+    </style>
+
 </resources>
