--- a/app/src/main/res/layout/activity_statistics.xml
+++ b/app/src/main/res/layout/activity_statistics.xml
@@ -32,24 +32,27 @@
         android:id="@+id/barChartLocation"
         android:layout_width="300dp"
         android:layout_height="200dp"
-         >
+         />
+<!--
+</com.github.mikephil.charting.charts.BarChart>
+-->
 
         <TextView
             android:id="@+id/likelyHour"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:text="TextView" />
         <TextView
             android:id="@+id/likelyDay"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:text="TextView" />
         <TextView
             android:id="@+id/likelyLocation"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:text="TextView" />
-    </com.github.mikephil.charting.charts.BarChart>
+
 
 
 
