--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,6 +28,8 @@
     <color name = "evermore_background">#67230e</color>
     <color name = "evermore_navBar">#787a6c</color>
 
+    <color name = "multiply_background">#1aca54</color>
+
 
 
 
