--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -49,4 +49,10 @@
         <item name="android:statusBarColor" tools:targetApi="l">@color/black</item>
     </style>
 
+    <style name="Default" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <item name="android:colorBackground">#808080</item>
+        <item name = "colorOnBackground">@color/black</item>
+        <item name="colorPrimary">@color/black</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/black</item>
+    </style>
 </resources>
